@@ -1,3 +1,1 @@
-* fix the multiclient-walk-z bug
-
 * server change
